--- a/FormValidator/styles.css
+++ b/FormValidator/styles.css
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 
+
+:root{
+  --success-color: #2ECC71;
+  --error-color: #E74C3C;
+  --primary-color: #3498DB;
+}
+
+
 *{
   box-sizing: border-box;
 }
@@ -8,7 +16,7 @@ body{
   background-color: #F9FAFB;
   font-family     : 'Open Sans', 'sans-serif';
   display         : flex;
-  align-items     : center;
+  align-items     : center; 
   justify-content : center;
   min-height      : 100vh;
   margin          : 0; 
@@ -54,4 +62,36 @@ h2{
 .form-control input:focus{
   outline     : 0;
   border-color: #777;
+}
+
+.form-control.success input{
+  border-color: var(--success-color);
+}
+
+.form-control.error input{
+  border-color: var(--error-color);
+}
+
+.form-control small{
+  color   : var(--error-color);
+  position: absolute;
+  bottom: 0;
+  left  : 0;
+  visibility: hidden;
+}
+
+.form-control.error small{
+  visibility: visible;
+}
+
+.form button{
+  cursor: pointer;
+  background-color: var(--primary-color);
+  border: 2px solid var(--primary-color);
+  color: #FFF;
+  display: block;
+  font-size: 16px;
+  padding: 10px;
+  margin-top: 20px;
+  width: 100%;
 }
