--- a/MovieSiteBooking/styles.css
+++ b/MovieSiteBooking/styles.css
@@ -32,6 +32,11 @@ body{
   appearance: none;
 }
 
+.container{
+  perspective: 1000px;
+  margin-bottom: 30px;
+}
+
 .seat{
   background-color: #444451;
   height: 12px;
@@ -42,9 +47,67 @@ body{
 }
 
 .seat.selected{
-  background-color: red;
+  background-color: #6FEAF6;
+}
+
+.seat.occupied{
+  background-color: #FFF;
+}
+
+.seat:nth-of-type(2){
+  margin-right: 18px;
+}
+.seat:nth-last-of-type(3){
+  margin-right: 18px;
+}
+
+.seat:not(.occupied):hover{
+  cursor: pointer;
+  transform: scale(1.2);
+}
+.showcase .seat:not(.occupied):hover{
+  cursor: default;
+  transform: scale(1);
+}
+
+.showcase{
+  background-color: rgba(0,0,0,0.1);
+  padding: 5px 10px;
+  border-radius: 5px;
+  color: #777;
+  list-style-type: none;
+  display: flex;
+  justify-content: space-between;
+}
+
+.showcase li{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 10px;
+}
+
+.showcase small{
+  margin-left: 2px;
+}
+
+.screen{
+  background-color: #FFF;
+  height: 70px;
+  width: 100%;
+  margin: 15px 0;
+  transform: rotateX(-45deg);
+  box-shadow: 0 3px 10px rgba(255,255,255,0.7);
 }
 
 .row{
   display: flex;
+}
+
+.text{
+  margin: 5px 0px;
+}
+
+.text span{
+  color: #6FEAF6;
 }
